--- a/style/style.css
+++ b/style/style.css
@@ -9,7 +9,7 @@ body {
 /* heading style */
 .container{
     /* background-image: url('/images/resources/Banner\ Image.png'); */
-    background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%),  url('/images/resources/Banner\ Image.png');
+    background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%),  url('images/resources/Banner\ Image.png');
     width: 1320px;
     height: 600px;
     background-repeat: no-repeat;
