--- a/style/style.css
+++ b/style/style.css
@@ -8,11 +8,12 @@ body {
 }
 /* heading style */
 .container{
-    /* background-image: url('/images/resources/Banner\ Image.png'); */
-    background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%),  url('images/resources/Banner\ Image.png');
+    /* background-image: url('/images/Banner\ Image.png'); */
+    background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%),  url(images/Banner\ Image.png);
     width: 1320px;
     height: 600px;
     background-repeat: no-repeat;
+    background-position: center;
     margin: 40px auto;
 }
 .banner-title{
@@ -63,7 +64,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-image: url("images/resources/vector.png");
+    background-image: url(images/vector.png);
     background-repeat: no-repeat;
     background-position: center;
     margin-top: 150px;
