--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 *{
-    margin: 0%;
-    padding: 0%;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 body {
@@ -8,10 +8,10 @@ body {
 }
 /* heading style */
 .container{
-    /* background-image: url('/images/Banner\ Image.png'); */
-    background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%),  url(images/Banner\ Image.png);
+    background-image: url('/images/Banner\ Image.png');
     width: 1320px;
     height: 600px;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     margin: 40px auto;
@@ -25,8 +25,8 @@ body {
     font-size: 32px;
     font-weight: 400;
 }
-.banner-title>div> h1{
-    font-size: 80px;
+.banner-title  h1{
+    font-size: 88px;
     font-weight: 900;
 }
 /* main body style */
@@ -64,7 +64,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-image: url(images/vector.png);
+    background-image: url('/images/Vectorrr.png');
     background-repeat: no-repeat;
     background-position: center;
     margin-top: 150px;
