--- a/style/style.css
+++ b/style/style.css
@@ -18,7 +18,7 @@ body {
 } */
 
 header{
-    background-image:linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url(images/Banner\ Image.png);
+    background-image:url('/images/banner.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
