--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 } */
 
 .header{
-    background-image:url('/images/banner.png');
+    background-image:url(images/banner.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -76,7 +76,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-image: url('/images/vector.png');
+    background-image: url(images/vector.png);
     background-repeat: no-repeat;
     background-position: center;
     margin-top: 150px;
